test/should-fail/jfxc2839.visage
/*
 * Regression test: JFXC-2839: Compiler crash: 13 [30 ..50]
 *
 * @test/compile-error
 */

var x:Number[] = 13 [30 ..50];